# skulpture

./: BUGS  CMakeLists.txt  NEWS  NOTES  README  README.md
color-schemes/: CMakeLists.txt  SkulptureBeton.colors  SkulptureChocolate.colors  SkulptureIce.colors  SkulptureMint.colors  SkulptureStone.colors  SkulptureStrawberry.colors  SkulptureVanilla.colors
kwin-client/: CMakeLists.txt  kwin_skulpture.cpp  kwin_skulpture.h  skulpture.desktop
kwin-client/config/: CMakeLists.txt  configmanager.h  kwin_skulpture_config.cpp  kwin_skulpture_config.h  kwin_skulpture_dialog.ui
src/: CMakeLists.txt  sk_animations.cpp  sk_arrows.cpp  sk_buttons.cpp  sk_cache.cpp  sk_classes.cpp  sk_color.cpp  sk_combobox.cpp  sk_complex.cpp  sk_dial.cpp  sk_dock.cpp  sk_factory.cpp  sk_factory.h  sk_frames.cpp  sk_gradients.cpp  sk_header.cpp  sk_icons.cpp  sk_layout.cpp  sk_mdi.cpp  sk_menu.cpp  sk_misc.cpp  sk_progressbar.cpp  sk_scrollbar.cpp  sk_shadows.cpp  sk_shapes.cpp  sk_shortcuts.cpp  sk_slider.cpp  sk_spinbox.cpp  sk_tabs.cpp  sk_text.cpp  sk_toolbar.cpp  skulpture.cpp  skulpture.h  skulpture.themerc  skulpture_p.cpp  skulpture_p.h  skulpturestyle.json  skulpturestyleplugin.cpp  skulpturestyleplugin.h  src.pro
src/config/: CMakeLists.txt  configmanager.h  sk_config.cpp  sk_config.h  sk_dialog.ui  sk_preview1.ui  sk_preview2.ui  skulptureui.rc
